Añadidas clases y métodos para gestión de empleados
Se añadieron referencias a nuevos archivos en `capa_persistencia.csproj` para incluir funcionalidades relacionadas con áreas, cargos, contratos, sistemas de pensiones, tipos de jornadas y tipos de salarios.

- Corregido un comentario en `trabajadores.cs` para indicar que la clase `Empleado` pertenece a la capa de entidades.
- Creación de las clases `Areas`, `Cargos`, `Contratos`, `SistemasPensiones`, `TiposJornadas` y `TiposSalarios` con métodos para interactuar con la base de datos mediante procedimientos almacenados.
- Implementados métodos para consultar, crear, actualizar y finalizar contratos, así como para gestionar áreas, cargos, sistemas de pensiones, tipos de jornadas y tipos de salarios.

--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -164,6 +164,12 @@
   <ItemGroup>
     <Compile Include="modulo_base\Conexion.cs" />
     <Compile Include="modulo_base\ExcepcionTrabajadoresValido.cs" />
+    <Compile Include="modulo_principal\Areas.cs" />
+    <Compile Include="modulo_principal\Cargos.cs" />
+    <Compile Include="modulo_principal\Contratos.cs" />
+    <Compile Include="modulo_principal\SistemasPensiones.cs" />
+    <Compile Include="modulo_principal\TiposJornadas.cs" />
+    <Compile Include="modulo_principal\TiposSalarios.cs" />
     <Compile Include="modulo_principal\trabajadores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
