--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuditoriaContrato.cs" />
+    <Compile Include="CambioContrato.cs" />
     <Compile Include="DominioBase.cs" />
-    <Compile Include="oño.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="ContratoLaboral.cs" />
+    <Compile Include="Empleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidadorContrato.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
