--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -41,13 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuditoriaContrato.cs" />
-    <Compile Include="CambioContrato.cs" />
-    <Compile Include="DominioBase.cs" />
+    <Compile Include="AreaTrabajo.cs" />
+    <Compile Include="Cargo.cs" />
     <Compile Include="ContratoLaboral.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidadorContrato.cs" />
+    <Compile Include="SistemaPension.cs" />
+    <Compile Include="TipoJornada.cs" />
+    <Compile Include="TipoSalario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
