--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -41,11 +41,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdelantoSueldo.cs" />
+    <Compile Include="Area.cs" />
     <Compile Include="AuditoriaContrato.cs" />
+    <Compile Include="Bono.cs" />
     <Compile Include="CambioContrato.cs" />
+    <Compile Include="Cargo.cs" />
+    <Compile Include="CTS.cs" />
+    <Compile Include="DetalleNomina.cs" />
+    <Compile Include="DetalleParametro.cs" />
     <Compile Include="DominioBase.cs" />
-    <Compile Include="ContratoLaboral.cs" />
+    <Compile Include="Contrato.cs" />
+    <Compile Include="EstadoContrato.cs" />
+    <Compile Include="Falta.cs" />
+    <Compile Include="Gratificacion.cs" />
+    <Compile Include="HoraExtra.cs" />
+    <Compile Include="HoraTrabajada.cs" />
+    <Compile Include="ImpuestoRentaAcumulado.cs" />
+    <Compile Include="ImpuestoRentaTramo.cs" />
+    <Compile Include="Nominas.cs" />
+    <Compile Include="Parametro.cs" />
+    <Compile Include="Periodo.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sede.cs" />
+    <Compile Include="Tardanza.cs" />
+    <Compile Include="TipoHoraExtra.cs" />
+    <Compile Include="TipoIdentificacion.cs" />
+    <Compile Include="TipoJornada.cs" />
+    <Compile Include="TipoPension.cs" />
+    <Compile Include="TipoSalario.cs" />
+    <Compile Include="Trabajador.cs" />
     <Compile Include="ValidadorContrato.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
