Reestructuración del modelo de dominio en capa_dominio
Se han eliminado y reemplazado varias clases en el espacio de nombres `capa_dominio`, incluyendo `AreaTrabajo`, `ContratoLaboral`, `Empleado`, y `SistemaPension`, por nuevas implementaciones que mejoran la claridad y funcionalidad.

Se introdujeron nuevas clases como `Area`, `Contrato`, `CambioContrato`, `Contacto`, `ContratoDetalle`, `EstadoContrato`, `HorarioTrabajador`, `Persona`, `Sede`, y `Trabajador`, cada una con propiedades y métodos para gestionar su estado y validaciones.

Además, se actualizaron las propiedades de las clases existentes para permitir un acceso más flexible y se modificaron las referencias en el archivo `capa_dominio.csproj` para reflejar estos cambios.

--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -41,13 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AreaTrabajo.cs" />
+    <Compile Include="Area.cs" />
+    <Compile Include="CambioContrato.cs" />
     <Compile Include="Cargo.cs" />
-    <Compile Include="ContratoLaboral.cs" />
-    <Compile Include="Empleado.cs" />
+    <Compile Include="Contacto.cs" />
+    <Compile Include="Contrato.cs" />
+    <Compile Include="ContratoDetalle.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="EstadoContrato.cs" />
+    <Compile Include="HorarioTrabajador.cs" />
+    <Compile Include="Trabajador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SistemaPension.cs" />
-    <Compile Include="TipoJornada.cs" />
+    <Compile Include="Sede.cs" />
+    <Compile Include="TipoPension.cs" />
     <Compile Include="TipoSalario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
