--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Periodo.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reporte.cs" />
     <Compile Include="Sede.cs" />
     <Compile Include="Tardanza.cs" />
     <Compile Include="TipoHoraExtra.cs" />
