--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -43,14 +43,13 @@
   <ItemGroup>
     <Compile Include="AdelantoSueldo.cs" />
     <Compile Include="Area.cs" />
-    <Compile Include="AuditoriaContrato.cs" />
     <Compile Include="Bono.cs" />
     <Compile Include="CambioContrato.cs" />
     <Compile Include="Cargo.cs" />
+    <Compile Include="Contacto.cs" />
     <Compile Include="CTS.cs" />
     <Compile Include="DetalleNomina.cs" />
     <Compile Include="DetalleParametro.cs" />
-    <Compile Include="DominioBase.cs" />
     <Compile Include="Contrato.cs" />
     <Compile Include="EstadoContrato.cs" />
     <Compile Include="Falta.cs" />
@@ -62,7 +61,6 @@
     <Compile Include="Nominas.cs" />
     <Compile Include="Parametro.cs" />
     <Compile Include="Periodo.cs" />
-    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporte.cs" />
     <Compile Include="Sede.cs" />
@@ -73,7 +71,6 @@
     <Compile Include="TipoPension.cs" />
     <Compile Include="TipoSalario.cs" />
     <Compile Include="Trabajador.cs" />
-    <Compile Include="ValidadorContrato.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
