Refactorización de clases de dominio y persistencia
Se eliminaron atributos y métodos relacionados con estados y fechas
de creación en las clases `Area`, `Cargo` y `Sede` para simplificar
la lógica de negocio. También se eliminaron métodos como `EstaActiva`,
`Activar`, `Desactivar` y `Resumen` en varias clases del dominio.

Se añadió un nuevo atributo `areas` en la clase `Sede` para asociar
áreas a una sede. Además, se creó la clase `Sedes` en la capa de
persistencia, que incluye el método `ObtenerSedesConAreas` para
consultar sedes y sus áreas desde la base de datos.

Se actualizó el archivo `capa_persistencia.csproj` para incluir
la nueva clase `Sedes`. Estos cambios promueven una separación
más clara entre las capas de dominio y persistencia.

--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -167,6 +167,7 @@
     <Compile Include="modulo_principal\Areas.cs" />
     <Compile Include="modulo_principal\Cargos.cs" />
     <Compile Include="modulo_principal\Contratos.cs" />
+    <Compile Include="modulo_principal\Sedes.cs" />
     <Compile Include="modulo_principal\SistemasPensiones.cs" />
     <Compile Include="modulo_principal\TiposJornadas.cs" />
     <Compile Include="modulo_principal\TiposSalarios.cs" />
