Añadida clase para gestionar adelantos de sueldo
Se actualizó el archivo `capa_persistencia.csproj` para incluir la nueva clase `Adelanto_sueldo.cs` en el directorio `modulo_principal`.

Se añadió el archivo `Adelanto_sueldo.cs` con las siguientes clases:
- `AdelantoSueldo`: modelo de datos con propiedades y métodos de validación (`EsMontoValido` y `EsReciente`).
- `Adelanto_sueldo`: clase para interactuar con la base de datos, incluyendo el método `InsertarAdelantoSueldo` que utiliza un procedimiento almacenado.

Se añadieron dependencias necesarias para la funcionalidad (`System`, `Microsoft.Data.SqlClient`, entre otras).

Nota: Se incluye un comentario indicando que la clase `AdelantoSueldo` debería estar en la capa de dominio, lo que podría implicar una mejora futura en la arquitectura.

--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <Compile Include="modulo_base\Conexion.cs" />
     <Compile Include="modulo_base\ExcepcionTrabajadoresValido.cs" />
+    <Compile Include="modulo_principal\Adelanto_sueldo.cs" />
     <Compile Include="modulo_principal\Areas.cs" />
     <Compile Include="modulo_principal\Cargos.cs" />
     <Compile Include="modulo_principal\Contratos.cs" />
