Capa Persistencia de la historia de usuario dos
Añadidas clases y métodos para gestión de nóminas

Se agregó la clase `ExcepcionNomina` para manejar errores específicos del dominio de nóminas.
Se implementaron las clases `DetallesNomina`, `ImpuestoRenta`, `Nominas` y `Parametros` con métodos para insertar, consultar y actualizar datos relacionados con nóminas, tramos de IR y parámetros vigentes.

Se actualizaron los archivos de proyecto `capa_persistencia.csproj` y `grupo02-calidad-sofware.csproj` para incluir las nuevas clases y configuraciones.

Estos cambios mejoran la modularidad y amplían las funcionalidades relacionadas con la gestión de nóminas.

Añadidas clases y métodos para gestión de nóminas

Se añadieron nuevas referencias en los proyectos `capa_persistencia.csproj` y `grupo02-calidad-sofware.csproj` para incluir funcionalidades relacionadas con la gestión de nóminas.

- Creada la clase `ExcepcionNomina` para manejo de errores específicos.
- Añadida la clase `DetallesNomina` con método para insertar detalles de nómina.
- Incorporada la clase `ImpuestoRenta` para consultar tramos de IR por año.
- Añadida la clase `Nominas` con métodos para insertar, actualizar y consultar nóminas.
- Creada la clase `Parametros` para gestionar parámetros vigentes de nómina.

Los cambios incluyen integración con procedimientos almacenados y manejo de excepciones específicas.

--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -163,10 +163,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="modulo_base\Conexion.cs" />
+    <Compile Include="modulo_base\ExcepcionNomina.cs" />
     <Compile Include="modulo_base\ExcepcionTrabajadoresValido.cs" />
     <Compile Include="modulo_principal\Areas.cs" />
     <Compile Include="modulo_principal\Cargos.cs" />
     <Compile Include="modulo_principal\Contratos.cs" />
+    <Compile Include="modulo_principal\DetallesNomina.cs" />
+    <Compile Include="modulo_principal\ImpuestoRenta.cs" />
+    <Compile Include="modulo_principal\Nominas.cs" />
+    <Compile Include="modulo_principal\Parametros.cs" />
     <Compile Include="modulo_principal\SistemasPensiones.cs" />
     <Compile Include="modulo_principal\TiposJornadas.cs" />
     <Compile Include="modulo_principal\TiposSalarios.cs" />
