--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -174,7 +174,12 @@
     <Compile Include="modulo_principal\trabajadores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\capa_dominio\capa_dominio.csproj">
+      <Project>{55fe5196-96ec-493b-8b32-cdb085434c71}</Project>
+      <Name>capa_dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
