--- a/capa_persistencia/capa_persistencia.csproj
+++ b/capa_persistencia/capa_persistencia.csproj
@@ -165,14 +165,19 @@
     <Compile Include="modulo_base\Conexion.cs" />
     <Compile Include="modulo_base\ExcepcionNomina.cs" />
     <Compile Include="modulo_base\ExcepcionTrabajadoresValido.cs" />
+    <Compile Include="modulo_principal\Adelantos.cs" />
     <Compile Include="modulo_principal\Areas.cs" />
+    <Compile Include="modulo_principal\Bonos.cs" />
     <Compile Include="modulo_principal\Cargos.cs" />
     <Compile Include="modulo_principal\Contratos.cs" />
     <Compile Include="modulo_principal\DetallesNomina.cs" />
+    <Compile Include="modulo_principal\Faltas.cs" />
+    <Compile Include="modulo_principal\HorasTrabajadas.cs" />
     <Compile Include="modulo_principal\ImpuestoRenta.cs" />
     <Compile Include="modulo_principal\Nominas.cs" />
     <Compile Include="modulo_principal\Parametros.cs" />
     <Compile Include="modulo_principal\SistemasPensiones.cs" />
+    <Compile Include="modulo_principal\Tardanzas.cs" />
     <Compile Include="modulo_principal\TiposJornadas.cs" />
     <Compile Include="modulo_principal\TiposSalarios.cs" />
     <Compile Include="modulo_principal\trabajadores.cs" />
