Refactorización y migración de lógica a DTOs
Se realizó una refactorización general para mejorar la organización y separación de responsabilidades en el código.
- Se comentaron clases redundantes (`AdelantoSueldo`, `Areas`).
- Se migraron parámetros individuales a DTOs (`AdelantoSueldoDTO`, `ContratoDTO`, `DetalleNominaDTO`).
- Se añadieron nuevas propiedades y ajustes en `ImpuestoRentaTramo`.
- Se actualizaron métodos para usar clases del dominio (`Parametros`, `ImpuestoRentaTramo`).
- Se añadieron métodos para obtener datos relacionados (`ObtenerAdelantosPorTrabajador`, `ObtenerSedesConAreas`).
- Se eliminaron clases internas y se reemplazaron por clases del dominio.

Estos cambios mejoran la reutilización, legibilidad y mantienen una estructura más modular.

--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -52,6 +52,9 @@
     <Compile Include="DetalleParametro.cs" />
     <Compile Include="Contrato.cs" />
     <Compile Include="ContratoDetalle.cs" />
+    <Compile Include="dto\AdelantoSueldoDTO.cs" />
+    <Compile Include="dto\ContratoDTO.cs" />
+    <Compile Include="dto\DetalleNominaDTO.cs" />
     <Compile Include="ImpuestoRentaAcumuladoDTO.cs" />
     <Compile Include="EstadoContrato.cs" />
     <Compile Include="Falta.cs" />
