Simplificación del modelo de dominio
Se realizaron los siguientes cambios principales:
- Reorganización y simplificación de clases en `capa_dominio`.
- Eliminación de lógica redundante en clases como `DetalleNomina`, `EstadoContrato`, `TipoHoraExtra`, entre otras.
- Sustitución de la lista de contratos en `Trabajador` por una referencia única.
- Eliminación de la clase `HoraExtra` y migración de su funcionalidad.
- Ajustes en `HoraTrabajada` para incluir cálculo de horas extras.
- Reubicación de `ImpuestoRentaAcumuladoDTO` y adición de `TrabajadorProcesableDTO`.
- Actualización del archivo del proyecto `capa_dominio.csproj`.

Estos cambios mejoran la claridad, eliminan duplicación y consolidan responsabilidades.

--- a/capa_dominio/capa_dominio.csproj
+++ b/capa_dominio/capa_dominio.csproj
@@ -54,10 +54,10 @@
     <Compile Include="dto\AdelantoSueldoDTO.cs" />
     <Compile Include="dto\ContratoDTO.cs" />
     <Compile Include="dto\DetalleNominaDTO.cs" />
-    <Compile Include="ImpuestoRentaAcumuladoDTO.cs" />
+    <Compile Include="dto\ImpuestoRentaAcumuladoDTO.cs" />
+    <Compile Include="dto\TrabajadorProcesableDTO.cs" />
     <Compile Include="EstadoContrato.cs" />
     <Compile Include="Falta.cs" />
-    <Compile Include="HoraExtra.cs" />
     <Compile Include="HoraTrabajada.cs" />
     <Compile Include="ImpuestoRentaAcumulado.cs" />
     <Compile Include="ImpuestoRentaTramo.cs" />
